--- a/billboard-ui/src/app/app.component.html
+++ b/billboard-ui/src/app/app.component.html
@@ -2,10 +2,10 @@
 <h1>
 	Welcome to {{ title }}!
 	<nav>
-	   <a routerLink="/dashboard">Dashboard</a>
-		<a routerLink="/listings">Listings</a>
+	 	<a routerLink="/listings">Listings</a>
+		<a routerLink="/mylistings">MyListings</a>
+		<a routerLink="/createlisting">Create Listing</a>
 	</nav>
 	<router-outlet></router-outlet>
-	<app-messages></app-messages>
 </h1>
 
