--- a/billboard-ui/src/app/dashboard/dashboard.component.html
+++ b/billboard-ui/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
-<h3>Top Heroes</h3>
+<h3>Top Listings</h3>
 <div class="grid grid-pad">
   <a *ngFor="let listing of listings" class="col-1-4" routerLink="/detail/{{listing.id}}">
     <div class="module listing">
-      <h4>{{listing.name}}</h4>
+      <img src="{{listing.imageUrls[0]}}" style="width:48px;height:30px;">
     </div>
   </a>
 </div>
+
+<app-listing-search></app-listing-search>
 
