--- a/billboard-ui/src/app/app.component.html
+++ b/billboard-ui/src/app/app.component.html
@@ -4,7 +4,7 @@
 	<nav>
 	 	<a routerLink="/listings">Listings</a>
 		<a routerLink="/mylistings">MyListings</a>
-		<a routerLink="/createlisting">Create Listing</a>
+		<a routerLink="/mybids">MyBids</a>
 	</nav>
 	<router-outlet></router-outlet>
 </h1>
