--- a/billboard-ui/src/app/listing-edit/listing-edit.component.html
+++ b/billboard-ui/src/app/listing-edit/listing-edit.component.html
@@ -43,8 +43,15 @@
 	</div>
 	<div>
 		<ul style="list-style-type: none">
-			<li *ngFor="let image of listing.imageUrls"><input [(ngModel)]="listing.imageUrls[0]"
-				type="file" accept="image/*"></li>
+			<li *ngFor="let image of listing.imageUrls"
+				style="width: 50px; height: 50px;"><img src="{{image}}">
+			</li>
+		</ul>
+	</div>
+	<div>
+		<ul style="list-style-type: none">
+			<li><input type="file" accept="image/*"
+				multiple (change)="fileChangeEvent($event)"></li>
 		</ul>
 	</div>
 
