--- a/billboard-ui/src/app/listings/listings.component.html
+++ b/billboard-ui/src/app/listings/listings.component.html
@@ -6,7 +6,7 @@
 
 <ul class="listings">
 	<li *ngFor="let listing of listings"><a
-		routerLink="/detail/{{listing.id}}"> 
+		routerLink="/listing-detail/{{listing.id}}"> 
 		<img
 			src="{{listing.imageUrls[0]}}" style="width: 48px; height: 30px;"> {{listing.title}}
 	</a></li>
