--- a/billboard-ui/src/app/my-bids/my-bids.component.css
+++ b/billboard-ui/src/app/my-bids/my-bids.component.css
@@ -1,11 +1,11 @@
 /* ListingsComponent's private CSS styles */
-.listings {
+.bids {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 15em;
 }
-.listings li {
+.bids li {
   position: relative;
   cursor: pointer;
   background-color: #EEE;
@@ -15,13 +15,13 @@
   border-radius: 4px;
 }
 
-.listings li:hover {
+.bids li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
 
-.listings a {
+.bids a {
   color: #888;
   text-decoration: none;
   position: relative;
@@ -29,11 +29,11 @@
   width: 250px;
 }
 
-.listings a:hover {
+.bids a:hover {
   color:#607D8B;
 }
 
-.listings .badge {
+.bids .badge {
   display: inline-block;
   font-size: small;
   color: white;
@@ -65,14 +65,6 @@ button:hover {
 }
 
 button.delete {
-  position: relative;
-  left: 194px;
-  top: -32px;
-  background-color: gray !important;
-  color: white;
-}
-
-button.create {
   position: relative;
   left: 194px;
   top: -32px;
