--- a/billboard-ui/src/app/my-listings/my-listings.component.html
+++ b/billboard-ui/src/app/my-listings/my-listings.component.html
@@ -1,13 +1,14 @@
 <h2>My Listings</h2>
+<button class="create" title="create listing"
+	routerLink="/createlisting">create</button>
 <ul class="listings">
 	<li *ngFor="let listing of listings"><a
-		routerLink="/detail/{{listing.id}}"> 
-		<img
-			src="{{listing.imageUrls[0]}}" style="width: 48px; height: 30px;"> {{listing.title}}
+		routerLink="/listing-detail/{{listing.id}}"> <img
+			src="{{listing.imageUrls[0]}}" style="width: 48px; height: 30px;">
+			{{listing.title}}
 	</a>
-	 <button class="edit" title="edit listing"
-    routerLink="/editListing/{{listing.id}}">edit</button>
-     <button class="delete" title="delete listing"
-    (click)="delete(listing)">delete</button>
-	</li>
+		<button class="edit" title="edit listing"
+			routerLink="/editListing/{{listing.id}}">edit</button>
+		<button class="delete" title="delete listing"
+			(click)="delete(listing)">delete</button></li>
 </ul>
