--- a/billboard-ui/src/app/public/landinghome.html
+++ b/billboard-ui/src/app/public/landinghome.html
@@ -14,6 +14,20 @@
                 </div>
             </div>
         </div>
+        
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a [routerLink]="['/home/login','user']">Login</a>
+                </li>
+                <li>
+                    <a [routerLink]="['/home/login','vendor']">Vendor Login</a>
+                </li>
+                <li>
+                    <a [routerLink]="['/home/login','admin']">Admin Login</a>
+                </li>
+            </ul>
+        </div>
 
     </div>
     <!-- /.container -->
