--- a/billboard-ui/src/app/public/auth/login/login.html
+++ b/billboard-ui/src/app/public/auth/login/login.html
@@ -22,7 +22,7 @@
         </button>
     </div>
     <hr>
-    <p><a [routerLink]="['/home/register']"> <i class="fa fa-fw fa-group"></i> Register</a>
+    <p *ngIf="role!=admin"><a [routerLink]="['/home/register']"> <i class="fa fa-fw fa-group"></i> Register</a>
         <a [routerLink]="['/home/forgotPassword']"> <i class="fa fa-fw fa-group"></i> Forgot Password?</a><br/>
         <a [routerLink]="['/home/resendCode']"> <i class="fa fa-fw fa-group"></i> Resend Confirmation Code</a>
     </p>
