--- a/billboard-ui/src/app/public/auth/login/login.html
+++ b/billboard-ui/src/app/public/auth/login/login.html
@@ -6,7 +6,7 @@
         {{ errorMessage }}
     </div>
     <div class="form-group">
-        <label class="control-label" for="signupEmail">Email</label>
+        <label class="control-label" for="signupEmail">Username</label>
         <input id="signupEmail" required type="email" maxlength="100" class="form-control" [(ngModel)]="email"
                [ngModelOptions]="{standalone: true}">
     </div>
