--- a/billboard-ui/src/app/public/auth/register/registration.html
+++ b/billboard-ui/src/app/public/auth/register/registration.html
@@ -7,7 +7,7 @@
     </div>
    
     <div class="form-group">
-        <label class="control-label" for="signupName">Name</label>
+        <label class="control-label" for="signupName">Username</label>
         <input id="signupName" type="text" maxlength="50" class="form-control"
                [(ngModel)]="registrationUser.name" [ngModelOptions]="{standalone: true}">
     </div>
