--- a/billboard-ui/src/app/secure/landing/secureHome.html
+++ b/billboard-ui/src/app/secure/landing/secureHome.html
@@ -22,9 +22,6 @@
 					<i class="fa fa-caret-down"></i>
 			</a>
 				<ul class="dropdown-menu dropdown-user">
-					<li><a [routerLink]="['/securehome/myprofile']"><i
-							class="fa fa-user fa-fw"></i> User Profile</a></li>
-					<li class="divider"></li>
 					<li><a [routerLink]="['/securehome/logout']">Logout</a></li>
 				</ul> <!-- /.dropdown-user --></li>
 			<!-- /.dropdown -->
@@ -34,12 +31,12 @@
 		<div class="navbar-default sidebar" role="navigation">
 			<div class="sidebar-nav navbar-collapse">
 				<ul class="nav" id="side-menu">
-					<li><a [routerLink]="['/securehome/myprofile']"><i
+					<!-- <li><a [routerLink]="['/securehome/myprofile']"><i
 							class="fa fa-dashboard fa-fw"></i> My Profile</a></li>
 					<li><a [routerLink]="['/securehome/jwttokens']"><i
 							class="fa fa-table fa-fw"></i> JWT Tokens</a></li>
 					<li ><a [routerLink]="['/securehome/useractivity']"><i
-							class="fa fa-table fa-fw"></i> Login Data</a></li>
+							class="fa fa-table fa-fw"></i> Login Data</a></li>-->
 					<li><a routerLink="/securehome/listings"><i
 							class="fa fa-dashboard fa-fw"></i>Listings</a></li>
 					<li *ngIf="role=='vendor'"><a routerLink="/securehome/mylistings"><i
