--- a/billboard-ui/src/app/public/auth/newpassword/newpassword.html
+++ b/billboard-ui/src/app/public/auth/newpassword/newpassword.html
@@ -6,7 +6,7 @@
         {{ errorMessage }}
     </div>
     <div class="form-group">
-        <label class="control-label" for="signupEmail">Username / Email</label>
+        <label class="control-label" for="signupEmail">Username</label>
         <input id="signupEmail" type="email" maxlength="50" class="form-control"
                [(ngModel)]="registrationUser.username" [ngModelOptions]="{standalone: true}">
     </div>
@@ -28,5 +28,5 @@
         </button>
     </div>
     <hr>
-    <p>Already have an account? <a [routerLink]="['/home/login']"> <i class="fa fa-fw fa-lock"></i>Login</a></p>
+    <p>Already have an account? <a [routerLink]="['/home']"> <i class="fa fa-fw fa-lock"></i>Login</a></p>
 </form>
